add bg animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
+<!--<div class="reveal" >-->
+  <!--<img src="../assets/images/bg2.jpg" />-->
+<!--</div>-->
 <div class="container">
+  <div class="converted-image" [class.show]="isRevealed"></div>
   <app-file-uploader [hidden]="hideFileUploader" (fileUploaded)="hendleFileUpload($event)"></app-file-uploader>
   <app-canvas-container [dataUrl]="dataUrl"></app-canvas-container>
 </div>
