--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,47 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  background: url('../assets/images/bg.jpg') no-repeat top;
+  background-size: cover;
+  overflow: hidden;
+
+  .converted-image {
+    background: url('../assets/images/bg2.jpg') no-repeat top;
+    background-size: cover;
+    width: 100vw;
+    height:100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    clip: rect(0, 100vw, 100vh, 0);
+    transition: all 3s ease;
+    &.show {
+      clip: rect(0, 0, 100vh, 0);
+
+    }
+  }
+}
+
+.reveal {
+  overflow:hidden;
+  position:absolute;
+  top:0;
+  left:0;
+
+  &:after {
+    content:" ";
+    position:absolute;
+    display:block;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#fff;
+    z-index:2;
+
+  }
+
+  &.show:after {
+    left:100%
+  }
 }
