fix zindex and add logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<!--<div class="reveal" >-->
-  <!--<img src="../assets/images/bg2.jpg" />-->
-<!--</div>-->
 <div class="container">
+  <div class="logo"></div>
+  <div class="line" [class.show]="isRevealed"></div>
   <div class="converted-image" [class.show]="isRevealed"></div>
-  <app-file-uploader [hidden]="hideFileUploader" (fileUploaded)="hendleFileUpload($event)"></app-file-uploader>
-  <app-canvas-container [dataUrl]="dataUrl"></app-canvas-container>
+  <div class="app-area">
+    <app-file-uploader [hidden]="hideFileUploader" (fileUploaded)="hendleFileUpload($event)"></app-file-uploader>
+    <app-canvas-container [dataUrl]="dataUrl"></app-canvas-container>
+  </div>
 </div>
