--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,17 @@
 .container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
   background: url('../assets/images/bg.jpg') no-repeat top;
   background-size: cover;
   overflow: hidden;
+
+  .logo {
+    background-image: url('../assets/images/TaO -logo.png');
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 178px;
+    height: 75px;
+    z-index: 100;
+  }
 
   .converted-image {
     background: url('../assets/images/bg2.jpg') no-repeat top;
@@ -17,34 +22,32 @@
     top: 0;
     left: 0;
     clip: rect(0, 100vw, 100vh, 0);
-    transition: all 3s ease;
+    transition: clip 5s ease;
     &.show {
       clip: rect(0, 0, 100vh, 0);
 
     }
   }
-}
 
-.reveal {
-  overflow:hidden;
-  position:absolute;
-  top:0;
-  left:0;
-
-  &:after {
-    content:" ";
-    position:absolute;
-    display:block;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:#fff;
-    z-index:2;
-
+  .line {
+    height:100vh;
+    width: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: right 5s ease;
+    border-left: 5px solid #6c6c6c;
+    z-index: 2;
+    &.show {
+      right: 100%;
+    }
   }
 
-  &.show:after {
-    left:100%
+  .app-area {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
   }
 }
