--- a/src/app/download-button/download-button.component.html
+++ b/src/app/download-button/download-button.component.html
@@ -1,1 +1,3 @@
-<a href="#" [hidden]="!base64" #downloader download="teal-n-orange.png">Download</a>
+<button [hidden]="!base64" class="converter">
+  <a href="#" #downloader download="teal-n-orange.png">Download</a>
+</button>
