--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
     <app-canvas-container [dataUrl]="dataUrl"></app-canvas-container>
   </div>
 </div>
+<app-sppinner *ngIf="loading"></app-sppinner>
